fix meaning of some col

--- a/data_exploration/data_exploration.ipynb
+++ b/data_exploration/data_exploration.ipynb
@@ -258,11 +258,11 @@
     "- authors: tác giả\n",
     "- original_price: giá gốc\n",
     "- current_price: giá hiện tại\n",
-    "- quantity: số lượng\n",
-    "- category: phân loại\n",
+    "- quantity: số lượng đã bán\n",
+    "- category: thể loại của sách\n",
     "- n_review: số lượt đánh giá\n",
     "- avg_rating: điểm đánh giá trung bình\n",
-    "- pages: số trang\n",
+    "- pages: tổng số trang của sách\n",
     "- manufacturer: nhà sản xuất\n",
     "- cover_link: đường dẫn đến ảnh trang bìa"
    ]
