Add Table of Contents

--- a/data_questions/question_thienanta1501.ipynb
+++ b/data_questions/question_thienanta1501.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "becbbc64-1977-4057-9e5a-d803d07f9b4a",
+   "id": "06c0aedd-3d3f-4f35-99e5-1d692e1c6fb9",
    "metadata": {},
    "source": [
-    "# Thể loại"
+    "# Mục lục\n",
+    "* [Giới thiệu](#gioithieu)\n",
+    "* [Tiền xử lý](#tienxuly)\n",
+    "* [Phân tích](#phantich)\n",
+    "    * [Bước 1: Tìm hiểu số lượng sách có mặt ở Tiki của top 10 thể loại phổ biến nhất.](#buoc1)\n",
+    "    * [Bước 2: Tìm hiểu doanh thu của các thể loại.](#buoc2)\n",
+    "    * [Bước 3: Tìm hiểu về mối liên hệ giữa mức giảm giá với số lượng bán ra của từng thể loại.](#buoc3)\n",
+    "    * [Bước 4: Tìm hiểu về mối liên hệ giữa giá hiện tại với số lượng bán ra của từng thể loại.](#buoc4)\n",
+    "    * [Bước 5: Tìm hiểu về mối liên hệ giữa điểm đánh giá, lượt đánh giá với số lượng bán ra của từng thể loại.](#buoc5)\n",
+    "* [Kết luận](#ketluan)"
    ]
   },
   {
@@ -13,7 +22,7 @@
    "id": "08f3431c-aff7-4c77-b51c-04887b3db04f",
    "metadata": {},
    "source": [
-    "## Giới thiệu:\n",
+    "## Giới thiệu: <a class=\"anchor\" id=\"gioithieu\"></a>\n",
     "**Câu hỏi**: Tiki nên có chiến lược kinh doanh như thế nào đối với việc lựa chọn thể loại sách?\n",
     "\n",
     "**Lợi ích**: \n",
@@ -197,7 +206,7 @@
    "id": "6c2cf702-57a7-4581-967e-6cc281874c73",
    "metadata": {},
    "source": [
-    "## Tiền xử lý"
+    "## Tiền xử lý <a class=\"anchor\" id=\"tienxuly\"></a>"
    ]
   },
   {
@@ -250,10 +259,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "447023aa-e84f-46be-a3f7-0ef543004cb5",
+   "metadata": {},
+   "source": [
+    "## Phân tích <a class=\"anchor\" id=\"phantich\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fce3e4ee-bc0b-4624-8816-b82a4a0d71ea",
    "metadata": {},
    "source": [
-    "## Bước 1: Tìm hiểu số lượng sách có mặt ở Tiki của top 10 thể loại phổ biến nhất."
+    "### Bước 1: Tìm hiểu số lượng sách có mặt ở Tiki của top 10 thể loại phổ biến nhất. <a id=\"buoc1\"></a>"
    ]
   },
   {
@@ -318,7 +335,7 @@
    "id": "d09db64a-b190-47cf-80c0-f6e211e239a6",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Biểu đồ thể hiện số lượng sách của top 10 thể loại có nhiều tựa sách nhất. Tuy nhiên, các thể loại như `sách Marketing - Bán hàng`, `Sách Học Tiếng Anh`, `Truyện trinh thám`, `Bài học kinh doanh`, `Sách kỹ năng làm việc`, `Sách nghệ thuật sống đẹp` chỉ có từ 40 - 60 đầu sách, điều này cho thấy với bộ dữ liệu này thì vẫn chưa có quá nhiều đầu sách và cũng chứng tỏ ưu thế áp đảo của các thể loại top đầu. Những thể loại này có số lượng ít do hướng đến nhóm đối tượng cụ thể, không phổ biến đại trà với mọi lứa tuổi.\n",
     "- Các thể loại cũng có số lượng tựa sách cao như `Truyện ngắn - Tản văn - Tạp Văn`, `Tiểu Thuyết` với 109 và 133 đầu sách. Đây cũng là thể loại được nhiều người ưa chuộng và nhiều tác giả sáng tác để phục vụ nhu cầu của các độc giả yêu thích thể loại tự sự này.\n",
     "- Thể loại áp đảo nhất là `Sách tư duy - Kỹ năng sống` với 292 tựa sách. Đây là thể loại phổ biến được rất nhiều độc giả săn đón với nhu cầu ở mọi lứa tuổi và phản ánh sự gia tăng quan tâm của độc giả về phát triển cá nhân, tư duy tích cực và kỹ năng mềm. Các nhà xuất bản và tác giả cũng đáp ứng nhu cầu này bằng cách liên tục ra mắt các tựa sách mới và Tiki cũng liên tục nhập những tựa sách theo thể loại này về.\n",
@@ -330,7 +347,7 @@
    "id": "70042d98-8eb9-42fd-9bd2-025b955b044d",
    "metadata": {},
    "source": [
-    "## Bước 2: Tìm hiểu doanh thu của các thể loại."
+    "### Bước 2: Tìm hiểu doanh thu của các thể loại. <a id=\"buoc2\"></a>"
    ]
   },
   {
@@ -420,7 +437,7 @@
    "id": "336d991e-6f64-46cf-8876-45f36dfa1b82",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Dẫn đầu là `Sách tư duy - Kỹ năng sống` với 25.3%, chiếm gần 1/4 doanh thu của top 10 doanh thu cao nhất, chứng tỏ ưu thế vượt trội của thể loại này, không chỉ có nhiều tựa sách mà doanh thu thể loại này mang lại cũng rất cao. Điều này cho thấy đây là thể loại có sức hút lớn nhất đối với người tiêu dùng, đồng thời có thể mang lại doanh thu vượt trội so với các thể loại khác.\n",
     "- Thể loại `Sách nghệ thuật sống đẹp` bất ngờ đứng ở vị trí thứ 2 với 21.4%, chiếm gần 1/5 doanh thu của top 10 doanh thu cao nhất, dù có số lượng tựa sách hạn chế. Điều này cho thấy thể loại này có sự vượt bậc về số lượng bán ra hoặc giá của các đầu sách. Có lẽ vì nhận được sự quan tâm mạnh mẽ của độc giả đến nội dung truyền cảm hứng và sống tích cực.\n",
     "- `Sách tài chính, tiền tệ` chiếm tỷ trọng cao thứ 3 dù số lượng sách còn hạn chế (không xuất hiện trong top phổ biến) chứng tỏ thể loại này đầu tư chất lượng hơn số lượng và đây là một thể loại có một lượng fan đông đảo quan tâm đến kinh tế, quản lý tài chính cá nhân và đầu tư.\n",
@@ -469,7 +486,8 @@
    "id": "425e11b6-3be9-42f5-ba51-909fe3b3c01c",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
+    "\n",
     "Từ biểu đồ, ta thấy ở thể loại `Sách nghệ thuật sống đẹp` xuất hiện 1 outlier có số lượng bán ra vượt trội hơn hẳn tất cả các tựa sách khác và gấn hơn 50 lần các tựa sách sách trong cùng thể loại."
    ]
   },
@@ -612,7 +630,7 @@
    "id": "fb889e0e-33ac-436d-bf8a-426ca12bda78",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Đầu tiên, ta nhận thấy tất cả các boxplot đều có phần trên median lớn hơn nhiều so với phần dưới, chứng tỏ số lượng bán ra có lượng lớn nhiều hơn hẳn các giá trị nhỏ. Hầu hết các boxplot đều có hộp rộng, cho thấy sự chênh lệch và không đồng đều giữa các tựa sách trong cùng một thể loại, điều này có thể lý giải do nhiều yếu tố khác chứ không chỉ là do thể loại, ví dụ như tác giả, nhà xuất bản,...\n",
     "- Dẫn đầu về trung vị của số lượng bán ra là thể loại `Sách kỹ năng làm việc` với 1988 sách. Chứng tỏ lượng fan ổn định và đông đảo của thể loại này.\n",
     "- Tiếp đến là `Bài học kinh doanh` với 1488 sách bán ra, điều này cho thấy thể loại sách này có sức hút với độc giả quan tâm lĩnh vực kinh doanh và sẵn sàng săn đón các đầu sách mới. Phạm vi rộng, cho thấy đây là thể loại được ưa chuộng nhưng phân bố không đồng đều.\n",
@@ -626,7 +644,7 @@
    "id": "72b6e18d-60d1-4ae1-aa31-be6b51d5fe78",
    "metadata": {},
    "source": [
-    "## Bước 3: Tìm hiểu về mối liên hệ giữa mức giảm giá với số lượng bán ra của từng thể loại."
+    "### Bước 3: Tìm hiểu về mối liên hệ giữa mức giảm giá với số lượng bán ra của từng thể loại. <a id=\"buoc3\"></a>"
    ]
   },
   {
@@ -672,7 +690,7 @@
    "id": "f422bbd8-c25c-4587-91e7-86d7d1908fba",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Nhìn chung, ở top 10 thể loại bán chạy nhất mức giảm giá dao động quanh 25 đến 35%, cho thấy ở mức giảm giá cao thì số lượng sách cũng bán chạy hơn ở các thể loại.\n",
     "- Số lượng bán ra vượt trội ở thể loại `Sách tư duy - Kỹ năng sống` dù mức giảm giá chỉ ở mức trung bình thấp hơn so với nhiều thể loại khác, cho thấy thể loại này có xu hướng áp đảo, có sự hấp dẫn nội tại của nội dung sách hoặc nhu cầu cao từ người đọc mà không phải chỉ do mức giá quá rẻ.\n",
     "- Thể loại `Sách nghệ thuật sống đẹp` cũng có số lượng bán ra vượt trội ở mức giảm giá trung bình, tuy nhiên, thể loại này có một tác phẩm có số lượng bán ra ngoại lệ vượt bậc như đã phân tích ở trên, vì vậy, không thể đánh giá quá rõ ràng về thể loại này.\n",
@@ -723,7 +741,7 @@
    "id": "45cb8bb6-59c3-4987-b7e9-6eef735d580d",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Nhìn chung, ta thấy mức giảm giá của các thể loại ít bán chạy cao, phân bổ từ 20 đến 40%, thậm chí có thể loại đến 45% nhưng vẫn có số lượng bán ra khá khiêm tốn dưới 4000 bản cho tất cả các thể loại, cho thấy đây là nhóm sách ít được quan tâm nhất.\n",
     "- Mức giảm giá tăng thì số lượng bán ra cũng tăng lên đáng kể, cho thấy chính sách ưu đãi có thể giúp các thể loại ít thu hút được lựa chọn nhiều hơn.\n",
     "- Tuy nhiên, mức giảm giá không phải yếu tố quan trọng quyết định doanh số đối với nhóm sách kém bán chạy vì vẫn chưa có sự bức phá về số lượng bán ra dù đã giảm giá rất nhiều, chủ yếu mức giảm giá này là để thanh lý các hàng tồn, các tựa sách kém bán chạy. Đặc thù nội dung, độ phổ biến của thể loại và tính ứng dụng thực tế của sách là những yếu tố chính ảnh hưởng đến doanh số."
@@ -734,7 +752,7 @@
    "id": "3ea32ba8-1938-43fb-9040-f42663f23ad2",
    "metadata": {},
    "source": [
-    "## Bước 4: Tìm hiểu về mối liên hệ giữa giá hiện tại với số lượng bán ra của từng thể loại."
+    "### Bước 4: Tìm hiểu về mối liên hệ giữa giá hiện tại với số lượng bán ra của từng thể loại. <a id=\"buoc4\"></a>"
    ]
   },
   {
@@ -780,7 +798,7 @@
    "id": "920047f5-c597-45fe-960d-d9f44f87580b",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Nhìn chung, mức giá bán ra của các thể loại bán chạy nhất vào khoảng 80000 đến 160000 VNĐ, đây là mức giá khá thấp và phù hợp với túi tiền của nhiều lứa tuổi, nhiều đối tượng.\n",
     "- Đây cũng là lý do khiến các đầu sách theo các thể loại này bán chạy."
    ]
@@ -828,7 +846,7 @@
    "id": "f060602b-e543-45ac-b3bd-59059d23a16b",
    "metadata": {},
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Nhìn chung, mức giá bán ra của các thể loại kém bán chạy khá cao, có nhiều tựa sách trên 250000 VNĐ.\n",
     "- Chủ yếu các thể loại này nghiên về một nhóm đối tượng cụ thể, có tính chuyên môn và chất lượng đảm bảo, nên số lượng bán ra ít và có mức giá khá cao nhưng vẫn đảm bảo một số lượng độc giả nhất định. Ví dụ như sách tham khảo cấp II có mức giá hơn 300000 nhưng vẫn bán được hơn 1000 bản vì các độc giả có nhu cầu nhất định do cần thiết trong việc học tập,..."
    ]
@@ -838,7 +856,7 @@
    "id": "7220d2c6-bf99-43d0-b9fe-d9ddbc7586bb",
    "metadata": {},
    "source": [
-    "## Bước 5: Tìm hiểu về mối liên hệ giữa điểm đánh giá, lượt đánh giá với số lượng bán ra của từng thể loại."
+    "### Bước 5: Tìm hiểu về mối liên hệ giữa điểm đánh giá, lượt đánh giá với số lượng bán ra của từng thể loại. <a id=\"buoc5\"></a>"
    ]
   },
   {
@@ -895,9 +913,11 @@
   {
    "cell_type": "markdown",
    "id": "a0416aa0-8341-4d22-beac-e056a4c97394",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### Nhận xét:\n",
+    "**Nhận xét**:\n",
     "- Nhìn chung, ta thấy phổ điểm trung vị cho các thể loại bán chạy là từ 4.2 đến 4.84 (trên thang 5.0), trong đó các điểm cao trên mức 4.5 khá nhiều, chứng tỏ chất lượng của các tựa sách bán chạy là ở mức ổn định.\n",
     "- Thể loại `Sách tư duy - Kỹ năng sống` có tổng lượt đánh giá cao nhất hơn 120,000 lượt và điểm trung bình khá cao 4.46. Dù không đạt điểm đánh giá cao nhất, thể loại này rất phổ biến nhờ đáp ứng nhu cầu rộng rãi của độc giả.\n",
     "- Điểm đánh giá trung bình cao ở `Sách học tiếng Anh` và `Truyện ngắn - Tản văn - Tạp văn` cho thấy chất lượng nội dung tốt, đáp ứng kỳ vọng của độc giả.\n",
@@ -910,7 +930,7 @@
    "id": "aa345aaf-9b30-4c8a-bddf-266cb36b9d86",
    "metadata": {},
    "source": [
-    "## Kết luận:"
+    "## Kết luận: <a class=\"anchor\" id=\"ketluan\"></a>"
    ]
   },
   {
