Adjust data collection

--- a/data_collection/data_collection.ipynb
+++ b/data_collection/data_collection.ipynb
@@ -45,9 +45,9 @@
    "source": [
     "## Sự cấp phép sử dụng dữ liệu từ tác giả: <a class=\"anchor\" id=\"capphep\"></a>\n",
     "- Giấy phép: CC0 1.0 Universal (CC0 1.0)Public Domain Dedication.\n",
-    "- Đây là một giấy phép được cung cấp bởi tổ chức Creative Commons, cho phép người tạo nội dung từ bỏ mọi quyền sở hữu trí tuệ đối với tác phẩm của mình, bao gồm bản quyền và các quyền liên quan. Điều này đặt tác phẩm vào phạm vi công cộng (public domain) trên toàn cầu, với mục đích làm cho tác phẩm hoàn toàn tự do sử dụng.\n",
+    "- Đây là một giấy phép được cung cấp bởi tổ chức Creative Commons, cho phép tác giả từ bỏ mọi quyền sở hữu trí tuệ đối với tác phẩm của mình, bao gồm bản quyền và các quyền liên quan. Từ đó, tác phẩm này sẽ được sử dụng tự do trên phạm vi toàn cầu.\n",
     "- Vì vậy, mọi người có thể sử dụng, sao chép, chỉnh sửa, phân phối và thậm chí thương mại hóa tác phẩm mà không cần xin phép.\n",
-    "- Nghĩa là việc sử dụng bộ dữ liệu này là hoàn toàn được phép."
+    "- Như vậy, việc sử dụng bộ dữ liệu này là hoàn toàn được phép."
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## Cách thu thập dữ liệu của tác giả: <a class=\"anchor\" id=\"thuthap\"></a>\n",
-    "Dữ liệu này được tác giả Bùi Minh Đức thu thập từ trang Tiki.vn bằng cách sử dụng ngôn ngữ lập trình để truy cập vào web Tiki.vn, đọc nội dung HTML và trích xuất dữ liệu các đầu sách."
+    "Dữ liệu này được tác giả Bùi Minh Đức thu thập từ trang Tiki.vn bằng cách sử dụng các công cụ tự động truy cập, trích xuất và lưu trữ dữ liệu các đầu sách từ trang web Tiki.vn"
    ]
   }
  ],
