modify some file

--- a/reflection/reflection.ipynb
+++ b/reflection/reflection.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# MỤC LỤC\n",
     "* [1. Những khó khăn và cách giải quyết trong quá trình phân tích](#phan1)\n",
-    "* [2. Những kiến thức học được sau khi phân tích](#phan2)"
+    "* [2. Những kiến thức học được sau khi phân tích](#phan2)\n",
+    "* [3.Nếu có thêm thời gian, nhóm sẽ làm gì?](#phan3)"
    ]
   },
   {
@@ -86,9 +87,32 @@
     "- Cách tổ chức công việc trên git.\n",
     "- Kỹ năng tiền xử lý dữ liệu\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a6a5cbb",
+   "metadata": {},
+   "source": [
+    "# 3.Nếu có thêm thời gian, nhóm sẽ làm gì?\n",
+    "<a id=\"phan3\"></a>\n",
+    "\n",
+    "- Tinh chỉnh thêm mô hình.\n",
+    "- Phân tích thêm nhiều khía cạnh.\n",
+    "- Tổ chức thành một dashboard.\n",
+    "- Thu thập thêm dữ liệu.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad514a67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -104,7 +128,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.15"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
