--- a/data_modeling/data_modeling.ipynb
+++ b/data_modeling/data_modeling.ipynb
@@ -280,9 +280,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 352814.49331514805\n",
-      "MAE: 382.8563687336664\n",
-      "R² Score: 0.7446193441022857\n",
+      "MSE: 352814.4933151478\n",
+      "MAE: 382.85636873366644\n",
+      "R² Score: 0.7446193441022859\n",
       "Trung bình số lượng bán ra: 1022.7994891443167\n",
       "Phương sai số lượng bán ra: 1557857.0882042113\n"
      ]
@@ -519,6 +519,7 @@
   "colab": {
    "provenance": []
   },
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -534,7 +535,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.15"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
